--- a/PortafolioMorenoMelisa/Frontend/src/app/components/experiencia/experiencia.component.html
+++ b/PortafolioMorenoMelisa/Frontend/src/app/components/experiencia/experiencia.component.html
@@ -1,7 +1,38 @@
 <div class="row">
     <h1> Experiencia Laboral</h1>
+    <div class="col-lg-2">
+        <button type="button" class="btn btn-dark" routerLink="/nuevaexp" *ngIf="isLogged">
+            Nueva Experiencia
+        </button>
+    </div>
+
     <div class="col-lg-1"></div>
     <div class="col-lg-11">
+        <table class="table">
+            <tbody>
+                <tr *ngFor="let Experiencia of expe">
+                    <td>
+                        <h2>{{Experiencia.nombreE}}</h2>
+                    </td>
+                    <td>{{Experiencia.descripcionE}}</td>
+                    <td *ngIf="isLogged">
+                        <button class="btn btn-light" routerLink="/editexp/{{Experiencia.id}}">
+                            <i class="bi bi-pencil-fill"></i> EDITAR
+                        </button>
+                    </td>
+                    <td *ngIf="isLogged">
+                        <button class="btn btn-danger" (click)="delete(Experiencia.id)">
+                            <i class="bi bi-trash-fill"></i> BORRAR</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+
+
+    <!-- <div class="col-lg-1"></div> -->
+    <!-- <div class="col-lg-11">
         <ul>
             <li><h2>Pasantía EIKON, Ensamblado de computadoras</h2></li>
             <h3>Octubre 2021</h3>
@@ -35,4 +66,4 @@
             - Control de stock e inventario.</p>
         </ul>
     </div>
-</div>
+</div> -->
