--- a/PortafolioMorenoMelisa/Frontend/src/app/components/login/login.component.html
+++ b/PortafolioMorenoMelisa/Frontend/src/app/components/login/login.component.html
@@ -9,31 +9,29 @@
   
                 <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
                 <p class="text-white-50 mb-5">Ingrese usuario y contraseña!</p>
-  
-                <div class="form-outline form-white mb-4">
-                  <input type="email" id="typeEmailX" class="form-control form-control-lg" />
-                  <label class="form-label" for="typeEmailX">Usuario</label>
-                </div>
-  
-                <div class="form-outline form-white mb-4">
-                  <input type="password" id="typePasswordX" class="form-control form-control-lg" />
-                  <label class="form-label" for="typePasswordX">Contraseña</label>
-                </div>
-  
-                <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">¿Has olvidado la contraseña?</a></p>
-  
-                <button class="btn btn-outline-light btn-lg px-5" type="submit">Iniciar sesión</button>
-  
-                <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                  <a href="#!" class="text-white"><i class="bi bi-facebook mx-4 px-2"></i></a>
-                  <a href="#!" class="text-white"><i class="bi bi-twitter mx-4 px-2"></i></a>
-                  <a href="#!" class="text-white"><i class="bi bi-google mx-4 px-2"></i></a>
-                </div>
-  
+
+                <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+
+                  <div class="form-outline form-white mb-4">
+                    <input type="user" id="nombreUsuario" class="form-control form-control-lg" [(ngModel)]="nombreUsuario" name="nombreUsuario" required/>
+                    <label class="form-label" for="nombreUsuario">Usuario</label>
+                  </div>
+    
+                  <div class="form-outline form-white mb-4">
+                    <input type="password" id="password" class="form-control form-control-lg" [(ngModel)]="password" name="password" required/>
+                    <label class="form-label" for="password">Contraseña</label>
+                  </div>
+    
+                  <!-- <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">¿Has olvidado la contraseña?</a></p> -->
+    
+                  <button class="btn btn-outline-light btn-lg px-5" type="submit">Iniciar sesión</button>
+                
+                </form>
+      
               </div>
   
               <div>
-                <p class="mb-0">¿No tiene una cuenta? <a href="#!" class="text-white-50 fw-bold">Regístrese</a>
+                <p class="mb-0">¿No tienes una cuenta? <a href="#!" class="text-white-50 fw-bold">Regístrese</a>
                 </p>
               </div>
   
